Quinto proyecto hecho.

--- a/dieta.html
+++ b/dieta.html
@@ -7,81 +7,82 @@
 
     <body>
 
-    <header>
+        <header>
 
         <nav>
+
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="multimedia.html">Multimedia</a></li>
                 <li><a href="dieta.html">Dieta</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
+
         </nav>
 
-    </header>
+        </header>
 
-    <main>
+        <main>
 
-        <section id="dieta">
+            <section id="tabla">
 
-            <h1>Dieta</h1>
+                <table border="1">
 
-            <table border="1">
-                <tr>
-                    <th>Dias</th>
-                    <th>Lunes</th>
-                    <th>Martes</th>
-                    <th>Miércoles</th>
-                    <th>Jueves</th>
-                    <th>Viernes</th>
-                </tr>
+                    <tr>
+                        <th>Dias</th>
+                        <th>Lunes</th>
+                        <th>Martes</th>
+                        <th>Miércoles</th>
+                        <th>Jueves</th>
+                        <th>Viernes</th>
+                    </tr>
 
-                <tr>
-                    <td rowspan="5">Comidas</td>
-                    <td>Comida1</td>
-                    <td>Comida1</td>
-                    <td>Comida1</td>
-                    <td>Comida1</td>
-                    <td>Comida1</td>
-                </tr>
+                    <tr>
+                        <td rowspan="5">Comidas</td>
+                        <td>Comida1</td>
+                        <td>Comida1</td>
+                        <td>Comida1</td>
+                        <td>Comida1</td>
+                        <td>Comida1</td>
+                    </tr>
 
-                <tr>
-                    <td>Comida2</td>
-                    <td>Comida2</td>
-                    <td>Comida2</td>
-                    <td>Comida2</td>
-                    <td>Comida2</td>
-                </tr>
+                    <tr>
+                        <td>Comida2</td>
+                        <td>Comida2</td>
+                        <td>Comida2</td>
+                        <td>Comida2</td>
+                        <td>Comida2</td>
+                    </tr>
 
-                <tr>
-                    <td>Comida3</td>
-                    <td>Comida3</td>
-                    <td>Comida3</td>
-                    <td>Comida3</td>
-                    <td>Comida3</td>
-                </tr>
+                    <tr>
+                        <td>Comida3</td>
+                        <td>Comida3</td>
+                        <td>Comida3</td>
+                        <td>Comida3</td>
+                        <td>Comida3</td>
+                    </tr>
 
-                <tr>
-                    <td>Comida4</td>
-                    <td>Comida4</td>
-                    <td>Comida4</td>
-                    <td>Comida4</td>
-                    <td>Comida4</td>
-                </tr>
+                    <tr>
+                        <td>Comida4</td>
+                        <td>Comida4</td>
+                        <td>Comida4</td>
+                        <td>Comida4</td>
+                        <td>Comida4</td>
+                    </tr>
 
-                <tr>
-                    <td>Comida5</td>
-                    <td>Comida5</td>
-                    <td>Comida5</td>
-                    <td>Comida5</td>
-                    <td>Comida5</td>
-                </tr>
+                    <tr>
+                        <td>Comida5</td>
+                        <td>Comida5</td>
+                        <td>Comida5</td>
+                        <td>Comida5</td>
+                        <td>Comida5</td>
+                    </tr>
 
-            </table>
+                </table>
 
-        </section>
+            </section>
 
-    </main>
+        </main>
 
     </body>
 
