--- a/contacto.html
+++ b/contacto.html
@@ -2,35 +2,36 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Contacto</title>
+        <title>Formulario de Contacto</title>
     </head>
 
     <body>
 
         <header>
 
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="multimedia.html">Multimedia</a></li>
-                <li><a href="dieta.html">Dieta</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul> 
+            <nav>
+
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="multimedia.html">Multimedia</a></li>
+                    <li><a href="dieta.html">Dieta</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+
+            </nav>
 
         </header>
 
         <main>
 
-            <h1>Formulario de Contacto</h1>
+            <section id="formulario">
 
-            <section id="contacto">
+                <h1>Formulario de Contacto</h1>
 
                 <form>
-
                     <div>
-
                         <label for="nombre">Nombre:</label>
                         <input type="text" id="nombre" />
-
                     </div>
                     <br/>
 
@@ -42,7 +43,7 @@
 
                     <div>
                         <label for="email">Email:</label>
-                        <input type="email" id="email" />
+                        <input type="email" id="email"/>
                     </div>
                     <br/>
 
@@ -68,13 +69,12 @@
                     </div>
                     <br/>
 
-                    <input type="submit" value="Enviar" />
-
+                        <input type="submit" value="Enviar" />
                 </form>
-                <hr/>
 
             </section>
-            
+            <hr/>
+
         </main>
 
     </body>
