--- a/multimedia.html
+++ b/multimedia.html
@@ -24,27 +24,19 @@
 
         <main>
 
-            <h1>Multimedia</h1>
+            <h2>Multimedia</h2>
 
-                <section id="multimedia">
+            <video src="media/BigBuckBunny_512kb.mp4" controls muted autoplay>
+                No es compatible.
+            </video>
+            <br/>
 
-                    <h2>Video Nativo</h2>
+            <audio src="media/cancion.wav" controls>
+                No es compatible.
+            </audio>
+            <br/>
 
-                    <video src="media/BigBuckBunny_512kb.mp4" controls muted autoplay>
-                        No es compatible.
-                    </video>
-
-                    <h2>Audio Nativo</h2>
-
-                    <audio src="media/cancion.wav" controls>
-                        No es compatible.
-                    </audio>
-
-                    <h2>Video de YouTube</h2>
-
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/57MCPdLi0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-                </section>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/z24irRRvCQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         </main>
 
