--- a/dieta.html
+++ b/dieta.html
@@ -2,34 +2,36 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Dieta</title>
+        <title>Dieta del Lagarto</title>
     </head>
 
     <body>
 
         <header>
 
-        <nav>
+            <nav>
 
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="multimedia.html">Multimedia</a></li>
-                <li><a href="dieta.html">Dieta</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="multimedia.html">Multimedia</a></li>
+                    <li><a href="dieta.html">Dieta</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
 
-        </nav>
+            </nav>
 
         </header>
 
         <main>
 
-            <section id="tabla">
+            <h1>Dieta</h1>
+
+            <section id="dieta">
 
                 <table border="1">
 
                     <tr>
-                        <th>Dias</th>
+                        <th>Días</th>
                         <th>Lunes</th>
                         <th>Martes</th>
                         <th>Miércoles</th>
