--- a/multimedia.html
+++ b/multimedia.html
@@ -10,33 +10,37 @@
         <header>
 
             <nav>
-
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="multimedia.html">Multimedia</a></li>
                     <li><a href="dieta.html">Dieta</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
-
             </nav>
 
         </header>
 
         <main>
 
-            <h2>Multimedia</h2>
+            <h1>Multimedia</h1>
 
-            <video src="media/BigBuckBunny_512kb.mp4" controls muted autoplay>
+            <h2>Video Nativo</h2>
+
+            <video src="media/BigBuckBunny_512kb.mp4" controls autoplay muted>
                 No es compatible.
             </video>
             <br/>
+
+            <h2>Audio Nativo</h2>
 
             <audio src="media/cancion.wav" controls>
                 No es compatible.
             </audio>
             <br/>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/z24irRRvCQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h2>Video de YouTube</h2>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SwuySB5oDLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         </main>
 
