--- a/contacto.html
+++ b/contacto.html
@@ -8,21 +8,25 @@
     <body>
 
         <header>
+
             <nav>
+
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="multimedia.html">Multimedia</a></li>
                     <li><a href="dieta.html">Dieta</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
+
             </nav>
+
         </header>
 
         <main>
 
-            <h1>Formulario de Contacto</h1>
+            <section id="contacto">
 
-            <section id="formulario">
+                <h1>Formulario de Contacto</h1>
 
                 <form>
 
@@ -55,7 +59,7 @@
                         <select id="genero">
                             <option value="hombre">Hombre</option>
                             <option value="mujer">Mujer</option>
-                            <option value="otro">Otro</option>
+                            <option value="Otro">Otro</option>
                         </select>
                     </div>
                     <br/>
@@ -69,7 +73,6 @@
                     <input type="submit" value="Enviar" />
 
                 </form>
-                <hr/>
 
             </section>
 
