--- a/dieta.html
+++ b/dieta.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Dieta del Lagarto</title>
+        <title>Dieta</title>
     </head>
 
     <body>
@@ -16,20 +16,16 @@
                     <li><a href="multimedia.html">Multimedia</a></li>
                     <li><a href="dieta.html">Dieta</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-
+                </ul> 
             </nav>
 
         </header>
 
         <main>
 
-            <h1>Dieta</h1>
-
             <section id="dieta">
 
                 <table border="1">
-
                     <tr>
                         <th>Días</th>
                         <th>Lunes</th>
