--- a/contacto.html
+++ b/contacto.html
@@ -59,13 +59,13 @@
                         <select id="genero">
                             <option value="hombre">Hombre</option>
                             <option value="mujer">Mujer</option>
-                            <option value="Otro">Otro</option>
+                            <option value="otro">Otro</option>
                         </select>
                     </div>
                     <br/>
 
                     <div>
-                        <label for="motivo">Motivo de Contacto:</label>
+                        <label for="motivo">Motivo:</label>
                         <textarea id="motivo"></textarea>
                     </div>
                     <br/>
