--- a/dieta.html
+++ b/dieta.html
@@ -16,7 +16,8 @@
                     <li><a href="multimedia.html">Multimedia</a></li>
                     <li><a href="dieta.html">Dieta</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
-                </ul> 
+                </ul>
+
             </nav>
 
         </header>
@@ -26,8 +27,9 @@
             <section id="dieta">
 
                 <table border="1">
+
                     <tr>
-                        <th>Días</th>
+                        <th>Dias</th>
                         <th>Lunes</th>
                         <th>Martes</th>
                         <th>Miércoles</th>
