--- a/multimedia.html
+++ b/multimedia.html
@@ -9,16 +9,12 @@
 
         <header>
 
-            <nav>
-
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="multimedia.html">Multimedia</a></li>
-                    <li><a href="dieta.html">Dieta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-
-            </nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="multimedia.html">Multimedia</a></li>
+                <li><a href="dieta.html">Dieta</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
 
         </header>
 
@@ -28,7 +24,7 @@
 
                 <h1>Video Nativo</h1>
 
-                <video src="media/BigBuckBunny_512kb.mp4" controls autoplay>
+                <video src="media/video.mp4" controls muted>
                     No es compatible.
                 </video>
 
@@ -40,7 +36,7 @@
 
                 <h2>Video de YouTube</h2>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DDAEZ-S8HMA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3CdA0yS-D2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
             </section>
 
